Now using .net for control networks instead of .pvl
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1444 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetmerge/tsts/duplication/Makefile
+++ b/isis/src/control/apps/cnetmerge/tsts/duplication/Makefile
@@ -6,7 +6,7 @@ commands:
 	$(APPNAME) INPUTTYPE=cnets \
 	FROM1=$(INPUT)/testNet.ctl \
 	FROM2=$(INPUT)/testNet2.ctl \
-	TO=$(OUTPUT)/testReplace.pvl \
+	TO=$(OUTPUT)/testReplace.net \
 	DUPLICATEPOINTS=merge \
 	REPORT=$(OUTPUT)/report.txt \
 	ID=testReplaceMerge DESCRIPTION=NewTextCtl \
