Major changes to ControlMeasure and ControlPoint
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1445 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/coreg/tsts/cnet/Makefile
+++ b/isis/src/base/apps/coreg/tsts/cnet/Makefile
@@ -12,6 +12,6 @@ commands:
 	  match=$(INPUT)/CRU_000004_1200_RED4_0.equi.cub \
 	  deffile=$(INPUT)/coregtemp.def \
 	  to=$(OUTPUT)/coregTruth.cub \
-	  onet=$(OUTPUT)/coregTruthCnet.pvl \
+	  onet=$(OUTPUT)/coregTruthCnet.net \
 	  flatfile=$(OUTPUT)/coregTruthFlatFile.txt \
 	  interp=n > /dev/null;
