Using binary cnet diff now
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1457 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetnewradii/tsts/somefailures/Makefile
+++ b/isis/src/control/apps/cnetnewradii/tsts/somefailures/Makefile
@@ -5,6 +5,6 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) CNET=$(INPUT)/AS15_Rev4_Reg_wLOLA.edited.net \
 	DEM=$(INPUT)/ldem_8ppd_LATneg30toneg18_LON142to178.cub \
-	TO=$(OUTPUT)/outputcnet.pvl \
+	TO=$(OUTPUT)/outputcnet.net \
 	networkid=SomeFailuresTestCase_CnetNewRadii > /dev/null;
 	mv failures.log $(OUTPUT)/failures.pvl;
