--- a/isis/src/control/apps/mat2cnet/tsts/errors/Makefile
+++ b/isis/src/control/apps/mat2cnet/tsts/errors/Makefile
@@ -6,7 +6,9 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	ls $(INPUT)/Isis3_cube*.cub >& $(OUTPUT)/cub3.lis;
-	$(APPNAME) list2=$(INPUT)/cub2.lis \
+	$(APPNAME) \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	list2=$(INPUT)/cub2.lis \
 	match=$(INPUT)/match.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	cnet=$(OUTPUT)/out.net \
@@ -15,6 +17,7 @@ commands:
 	target=Titan 2> $(OUTPUT)/error1.txt > /dev/null;
 	ls $(INPUT)/Isis2_cube*.cub >& $(OUTPUT)/cub2.lis;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match_noMatchptKeywd.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	cnet=$(OUTPUT)/out.net \
@@ -22,6 +25,7 @@ commands:
 	networkid=TestNet02 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match_noColumnLabels.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	cnet=$(OUTPUT)/out.net \
@@ -29,6 +33,7 @@ commands:
 	networkid=TestNet03 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match_invalidKeyword.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	cnet=$(OUTPUT)/out.net \
@@ -36,6 +41,7 @@ commands:
 	networkid=TestNet04 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match_invalidMeasType.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	cnet=$(OUTPUT)/out.net \
@@ -43,6 +49,7 @@ commands:
 	networkid=TestNet05 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match_repeatedPointID.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	cnet=$(OUTPUT)/out.net \
@@ -50,6 +57,7 @@ commands:
 	networkid=TestNet06 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match_invalidLineSamp.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	cnet=$(OUTPUT)/out.net \
@@ -57,6 +65,7 @@ commands:
 	networkid=TestNet07 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match.mat \
 	inputppp=true \
 	ppp=$(INPUT)/rand_invalidLineCount.ppp \
@@ -66,6 +75,7 @@ commands:
 	networkid=TestNet09 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
+	-preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
 	match=$(INPUT)/match.mat \
 	inputppp=true \
 	ppp=$(INPUT)/rand_invalidLatLonRad.ppp \
