--- a/isis/src/control/apps/cnetadd/tsts/point/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/point/Makefile
@@ -7,7 +7,9 @@ outnet.pvl.IGNORELINES = DateTime
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/add.lis;
 	$(APPNAME) innet=$(INPUT)/seedGrid.net addlist=$(OUTPUT)/add.lis \
-	outnet=$(OUTPUT)/outnet.pvl log=$(OUTPUT)/outlog.pvl \
+	outnet=$(OUTPUT)/outnet.bin log=$(OUTPUT)/outlog.pvl \
 	retrieval=POINT \
 	> /dev/null;
-	$(RM) $(OUTPUT)/add.lis;
+	cnetbin2pvl from=$(OUTPUT)/outnet.bin \
+	to=$(OUTPUT)/outnet.pvl > /dev/null;
+	$(RM) $(OUTPUT)/add.lis $(OUTPUT)/outnet.bin;
