--- a/isis/src/control/apps/cnetadd/tsts/validator/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/validator/Makefile
@@ -9,7 +9,10 @@ commands:
 	$(LS) $(INPUT)/*cal.cub > $(OUTPUT)/files.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
         innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
-	outnet=$(OUTPUT)/outnet.pvl log=$(OUTPUT)/outlog.pvl \
+	outnet=$(OUTPUT)/outnet.bin log=$(OUTPUT)/outlog.pvl \
 	deffile=$(INPUT)/deffile.def > /dev/null;
+	cnetbin2pvl from=$(OUTPUT)/outnet.bin \
+	to=$(OUTPUT)/outnet.pvl > /dev/null;
 	$(RM) $(OUTPUT)/add.lis;
 	$(RM) $(OUTPUT)/files.lis;
+	$(RM) $(OUTPUT)/outnet.bin;
