Modified for new ControlNet API's(UpdatePoint, UpdateMeasure)
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1474 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetref/tsts/interestOverlaps/Makefile
+++ b/isis/src/control/apps/cnetref/tsts/interestOverlaps/Makefile
@@ -12,7 +12,10 @@ commands:
 	  criteria=interest \
 	  limit=true \
 	  overlaplist=$(INPUT)/overlaps.lis \
-	  onet=$(OUTPUT)/truth.pvl \
+	  onet=$(OUTPUT)/truth.bin \
 	  networkid=DefaultTruth \
 	  Description=Testing > /dev/null;
+	  cnetbin2pvl from=$(OUTPUT)/truth.bin \
+	  to=$(OUTPUT)/truth.pvl >/dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
+	  $(RM) $(OUTPUT)/truth.bin;
