Added filtering to files for date and time, commented makefiles a little bit
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1483 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnettable/tsts/append/Makefile
+++ b/isis/src/control/apps/cnettable/tsts/append/Makefile
@@ -12,5 +12,11 @@ commands:
 	rm -f $(INPUT)/cubeList.lst > /dev/null;
 	cat $(OUTPUT)/appendTo.txt | sed s/,\[^,]\*\.cub,/,file.cub,/ \
 	  | sed 's/\([0-9][0-9]*\.[0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  > $(OUTPUT)/output.txt
 	rm -f $(OUTPUT)/appendTo.txt
+	# To comment what is going on:
+	# The 3 seds do as follows:
+	# 1. remove cube filenames
+	# 2. remove all but one digit of decimal numbers
+	# 3. remove date and time
