Added Flag to match DEM
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1603 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/mapmos/tsts/map/Makefile
+++ b/isis/src/base/apps/mapmos/tsts/map/Makefile
@@ -7,7 +7,7 @@ commands:
 	  mosaic=$(OUTPUT)/mapmosTruth2.cub \
 	  create=true \
 	  track=true \
-	  match=false \
+	  matchbandbin=false \
 	  minlat=10.765 \
 	  maxlat=34.445 \
 	  minlon=219.720 \
@@ -23,6 +23,6 @@ commands:
 	  inter=near > /dev/null;
 
 	  $(APPNAME) from=$(OUTPUT)/map.cub \
-	  mosaic=$(OUTPUT)/mapmosTruth2.cub match=false  > /dev/null;
+	  mosaic=$(OUTPUT)/mapmosTruth2.cub matchbandbin=false  > /dev/null;
 
 	  
