grid.xml: Added BOUNDARY, MINLAT, MAXLAT, MINLON and MAXLON options.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1645 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/grid/tsts/ground/Makefile
+++ b/isis/src/base/apps/grid/tsts/ground/Makefile
@@ -12,3 +12,11 @@ commands:
 	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
 	to=$(OUTPUT)/groundTruth3.cub \
 	mode=ground ticks=true diagonal=true > /dev/null;
+	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
+	to=$(OUTPUT)/groundTruth4.cub \
+	mode=ground minlat=16.5 maxlat=32.5 minlon=220.5 maxlon=233.5 \
+	> /dev/null;
+	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
+	to=$(OUTPUT)/groundTruth5.cub \
+	mode=ground minlat=16.5 maxlat=32.5 minlon=220.5 maxlon=233.5 \
+	boundary=true > /dev/null;
