Disabled the GainLineDrift module as it was in previous versions
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1679 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hicalbeta/assets/hicalbeta.XXXX.conf
+++ b/isis/src/mro/apps/hicalbeta/assets/hicalbeta.XXXX.conf
@@ -154,10 +154,12 @@ Object = Hical
 
 /* This profile contains parameters pertinent to processing down-line gain correction. */
 /* Required label keywords: CpmmNumber, ChannelNumber, Lines */
-/* This module has been reactivated as of 2010-01-29 */
   Group = Profile
     Name = GainLineDrift
     Module = GainLineDrift
+
+/*  As of 2008-06-25, this is the default */
+    Debug::SkipModule = True
 
     SkipLines            = 1
 /* Added "_hicalbeta" to filename as of 2008-04-02.  This is consistant with */
@@ -277,7 +279,7 @@ Object = Hical
 
 /* Uncomment this line to dump Module data for every module when using Debug */
 /* profiling. */
-    DumpModuleFile = "{OPATH}/{ProductId}_{Module}.log"
+#    DumpModuleFile = "{OPATH}/{ProductId}_{Module}.log"
   End_Group
 
 End_Object
