Using real cubes to compensate for a round up v. round down problem between 32 and 64 bit platforms
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1701 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/tsts/CropReduceCam2map/Makefile
+++ b/isis/src/base/tsts/CropReduceCam2map/Makefile
@@ -6,15 +6,15 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APP1NAME) from= $(INPUT)/lua0825f.cub \
-	  to= $(OUTPUT)/cropTruth.cub \
+	  to= $(OUTPUT)/cropTruth.cub+real \
 	  sample=15 nsamples=200 \
 	  line=50 nlines=200 > /dev/null;
 	$(APP2NAME) from= $(OUTPUT)/cropTruth.cub \
-	  to= $(OUTPUT)/CropReduceTruth.cub \
+	  to= $(OUTPUT)/CropReduceTruth.cub+real \
 	  mode=total \
 	  ons=150 onl=150 > /dev/null;
 	$(APP3NAME) from= $(OUTPUT)/CropReduceTruth.cub \
-	  to= $(OUTPUT)/CropReduceCam2mapTruth.cub \
+	  to= $(OUTPUT)/CropReduceCam2mapTruth.cub+real \
 	  > /dev/null;
 	catlab from=$(OUTPUT)/CropReduceCam2mapTruth.cub \
 	  > $(OUTPUT)/labels.pvl;
