cam2map.xml: Print file now includes PixelResolution, Scale, UpperLeftCornerX, and UpperLeftCornerY in Mapping group. ProjectionFactory.h: 2011-02-10 Jai Rideout - UpperLeftCornerX and UpperLeftCornerY are now set in projection mapping group via the new SetUpperLeftCorner method in Projection. Projection.h: 2011-02-10 Jai Rideout - added SetUpperLeftCorner() because ProjectionFactory needed a way to set UpperLeftCornerX and UpperLeftCornerY keywords after creating the projection. Mapping() now adds optional keywords UpperLeftCornerX, UpperLeftCornerY, PixelResolution, and Scale to original mapping group so that cam2map can properly display a clean mapping group.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1730 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cam2map/tsts/mpp/Makefile
+++ b/isis/src/base/apps/cam2map/tsts/mpp/Makefile
@@ -7,9 +7,12 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from= $(INPUT)/ab102401.cub \
 	  to=$(OUTPUT)/cam2mapTruth.cub \
+	  map=$(INPUT)/sinusoidal.map \
 	  pixres=mpp \
 	  defaultrange=camera \
 	  resolution=1000 > /dev/null;
+	catlab from=$(OUTPUT)/cam2mapTruth.cub \
+	  to=$(OUTPUT)/cubeLabel.pvl > /dev/null;
 	$(APPNAME) from= $(INPUT)/ab102401.cub \
 	  to=$(OUTPUT)/cam2mapCheckRange.cub \
 	  defaultrange=camera \
