--- a/isis/src/base/apps/caminfo/tsts/boundary/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/boundary/Makefile
@@ -7,3 +7,9 @@ commands:
 	TO=$(OUTPUT)/caminfo.pvl ISISLABEL=true ORIGINAL=true \
 	STATISTICS=true CAMSTATS=true linc=25 sinc=25 \
 	POLYGON=true pixinc=100 > /dev/null;
+	cat $(OUTPUT)/caminfo.pvl | \
+	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
+	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
+	  > $(OUTPUT)/caminfo2.pvl;
+	$(MV) $(OUTPUT)/caminfo2.pvl $(OUTPUT)/caminfo.pvl;
