Made GisFootprint regex catch all cases.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1801 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/caminfo/tsts/boundary/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/boundary/Makefile
@@ -10,6 +10,7 @@ commands:
 	cat $(OUTPUT)/caminfo.pvl | \
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
 	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
-	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
+	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' | \
+	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\()), (([-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
 	  > $(OUTPUT)/caminfo2.pvl;
 	$(MV) $(OUTPUT)/caminfo2.pvl $(OUTPUT)/caminfo.pvl;
