--- a/isis/src/base/apps/caminfo/tsts/default/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/default/Makefile
@@ -5,10 +5,20 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/input.cub \
 	TO=$(OUTPUT)/caminfo.pvl ISISLABEL=true ORIGINAL=true \
-	STATISTICS=true CAMSTATS=true POLYGON=true pixinc=100 > /dev/null;
+	STATISTICS=true CAMSTATS=true POLYGON=true polysinc=100 polylinc=100 > /dev/null;
 	cat $(OUTPUT)/caminfo.pvl | \
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
 	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
 	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
 	  > $(OUTPUT)/caminfo2.pvl;
 	$(MV) $(OUTPUT)/caminfo2.pvl $(OUTPUT)/caminfo.pvl;
+	
+	$(APPNAME) FROM=$(INPUT)/input.cub \
+	TO=$(OUTPUT)/caminfo2.pvl ISISLABEL=true ORIGINAL=true \
+	STATISTICS=true CAMSTATS=true POLYGON=true > /dev/null;
+	cat $(OUTPUT)/caminfo2.pvl | \
+	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
+	  sed 's/\([-0-9][0-9]*\.[0-9]\{5\}\)\([0-9]*\)\(, [-0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1\3/g' \
+	  > $(OUTPUT)/caminfo3.pvl;
+	$(MV) $(OUTPUT)/caminfo3.pvl $(OUTPUT)/caminfo2.pvl;
