--- a/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
@@ -8,5 +8,5 @@ commands:
 	cp $(INPUT)/m1301260.cub $(OUTPUT)/nadirTruth.cub;
 	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no cknadir=yes \
 	tspk='$$base/kernels/spk/de405.bsp' > /dev/null;
-	catlab from=$(OUTPUT)/nadirTruth.cub > $(OUTPUT)/labels.txt;
+	catlab from=$(OUTPUT)/nadirTruth.cub > $(OUTPUT)/labels.pvl;
 	rm $(OUTPUT)/nadirTruth.cub;
