Added tolerance check and got rid of os specific truth
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1828 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/apps/vimscal/tsts/default/Makefile
+++ b/isis/src/cassini/apps/vimscal/tsts/default/Makefile
@@ -1,5 +1,8 @@
 APPNAME = vimscal
 
+v1570021638_1.ir.iof.cal.cub.TOLERANCE = 4e-9
+v1570021638_1.ir.spec.cal.cub.TOLERANCE = 7e-8
+
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
