Fixed test because of software change
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1835 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/demprep/tsts/prepglobal/Makefile
+++ b/isis/src/base/apps/demprep/tsts/prepglobal/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/ulcn2005_lpo.cub \
 	  to=$(OUTPUT)/ulcn2005_lpo_pad.cub > /dev/null;
-	  catlab from=$(OUTPUT)/ulcn2005_lpo_pad.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/ulcn2005_lpo_pad.cub to=$(OUTPUT)/labels.txt > /dev/null;
