--- a/isis/src/base/apps/demprep/tsts/prepinside/Makefile
+++ b/isis/src/base/apps/demprep/tsts/prepinside/Makefile
@@ -7,4 +7,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/ulcn2005_lpo_inside.cub \
 	  to=$(OUTPUT)/ulcn2005_lpo_inside_pad.cub > /dev/null;
-	  catlab from=$(OUTPUT)/ulcn2005_lpo_inside_pad.cub >& $(OUTPUT)/labels.txt;
+	  catlab from=$(OUTPUT)/ulcn2005_lpo_inside_pad.cub to=$(OUTPUT)/labels.txt > /dev/null;
