--- a/isis/src/control/apps/cnetadd/tsts/default/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/default/Makefile
@@ -8,12 +8,14 @@ commands:
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
         innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
 	outnet=$(OUTPUT)/outnet.bin log=$(OUTPUT)/outlog.pvl \
-	> /dev/null;
+	tolist=$(OUTPUT)/outlist.txt > /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
         innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
 	extract=modified modifiedpoints=$(OUTPUT)/modified.txt \
 	outnet=$(OUTPUT)/modifiednet.bin log=$(OUTPUT)/modifiedlog.pvl \
 	> /dev/null;
+	$(CAT) $(OUTPUT)/outlist.txt | sed 's#.*/##' > $(OUTPUT)/temp.txt;
+	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/outlist.txt;
 	cnetbin2pvl from=$(OUTPUT)/outnet.bin \
 	to=$(OUTPUT)/outnet.pvl > /dev/null;
 	cnetbin2pvl from=$(OUTPUT)/modifiednet.bin \
