--- a/isis/src/control/apps/cnetadd/tsts/point/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/point/Makefile
@@ -8,8 +8,10 @@ commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/add.lis;
 	$(APPNAME) innet=$(INPUT)/seedGrid.net addlist=$(OUTPUT)/add.lis \
 	outnet=$(OUTPUT)/outnet.bin log=$(OUTPUT)/outlog.pvl \
-	retrieval=POINT \
+	retrieval=POINT tolist=$(OUTPUT)/outlist.txt \
 	> /dev/null;
 	cnetbin2pvl from=$(OUTPUT)/outnet.bin \
 	to=$(OUTPUT)/outnet.pvl > /dev/null;
+	$(CAT) $(OUTPUT)/outlist.txt | sed 's#.*/##' > $(OUTPUT)/temp.txt;
+	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/outlist.txt;
 	$(RM) $(OUTPUT)/add.lis $(OUTPUT)/outnet.bin;
