--- a/isis/src/mro/apps/hicubenorm/tsts/newVersion/Makefile
+++ b/isis/src/mro/apps/hicubenorm/tsts/newVersion/Makefile
@@ -4,7 +4,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from= $(INPUT)/ATL_20050526T063349_IR10_0.cub \
-	stats= $(OUTPUT)/truth.txt \
+	stats= $(OUTPUT)/truth \
 	new_version= true statsource= table \
 	fromstats= $(INPUT)/cubenorm.stats \
 	highpass_mode = highpass_divide \
