--- a/isis/src/mro/apps/hicubenorm/tsts/newVersion/Makefile
+++ b/isis/src/mro/apps/hicubenorm/tsts/newVersion/Makefile
@@ -4,9 +4,9 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from= $(INPUT)/ATL_20050526T063349_IR10_0.cub \
-	stats= $(OUTPUT)/truth \
+	stats= $(OUTPUT)/cubenorm.txt \
 	new_version= true statsource= table \
 	fromstats= $(INPUT)/cubenorm.stats \
-	highpass_mode = highpass_divide \
-	filter = 5 \
+	highpass_mode= highpass_divide \
+	filter= 5 \
 	pausecrop = true > /dev/null;
