Added tolerance for test
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1916 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cam2map/tsts/mpp/Makefile
+++ b/isis/src/base/apps/cam2map/tsts/mpp/Makefile
@@ -1,6 +1,7 @@
 APPNAME = cam2map
 
 cam2mapTruth.cub.TOLERANCE = .000001
+cam2mapCheckRange.cub.TOLERANCE = .000001
 
 include $(ISISROOT)/make/isismake.tsts
 
