Added tolerances to remove OSTruthData
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1922 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/rgb2hsv/tsts/manual/Makefile
+++ b/isis/src/base/apps/rgb2hsv/tsts/manual/Makefile
@@ -1,5 +1,9 @@
 APPNAME = rgb2hsv
 
+rgb2hsvTruth4.cub.TOLERANCE = 0.02
+rgb2hsvTruth5.cub.TOLERANCE = 0.0001
+rgb2hsvTruth6.cub.TOLERANCE = 0.0001
+
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
