Added tolerances to remove OSTruthData
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1923 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/hsv2rgb/tsts/default/Makefile
+++ b/isis/src/base/apps/hsv2rgb/tsts/default/Makefile
@@ -1,5 +1,8 @@
 APPNAME = hsv2rgb
 
+redTruth.cub.TOLERANCE = 0.0001
+blueTruth.cub.TOLERANCE = 0.0001
+
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
