Added small tolerance for samson and decon
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1926 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/tsts/CropReduceCam2map/Makefile
+++ b/isis/src/base/tsts/CropReduceCam2map/Makefile
@@ -2,6 +2,9 @@ APP1NAME = crop
 APP2NAME = reduce
 APP3NAME = cam2map
 
+# Single pixel different by this amount on samson and decon
+CropReduceCam2mapTruth.cub.TOLERANCE = 7.62939453125e-06 
+
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
