Updated tests to handle new LINC and SINC arguments.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1928 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/caminfo/tsts/boundary/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/boundary/Makefile
@@ -5,7 +5,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/f217s25.cub \
 	TO=$(OUTPUT)/caminfo.pvl ISISLABEL=true ORIGINAL=true \
-	STATISTICS=true CAMSTATS=true statslinc=25 statssinc=25 \
+	STATISTICS=true CAMSTATS=true linc=25 sinc=25 \
 	POLYGON=true polysinc=100 polylinc=100 > /dev/null;
 	cat $(OUTPUT)/caminfo.pvl | \
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
