Added tolerance to make it pass on 32 bit systems
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1944 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/lro/apps/lrowacpho/tsts/default/Makefile
+++ b/isis/src/lro/apps/lrowacpho/tsts/default/Makefile
@@ -1,6 +1,8 @@
 APPNAME = lrowacpho
 FILE=wac0000983c
 
+wac0000983c.vis.even.pho.cub.TOLERANCE = 0.0000001
+
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
