--- a/isis/src/base/apps/footprintinit/tsts/pushframe/Makefile
+++ b/isis/src/base/apps/footprintinit/tsts/pushframe/Makefile
@@ -6,10 +6,13 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(CP) $(INPUT)/V30027015RDR.even.cub $(OUTPUT)/V30027015RDR.even.cub;
 	$(APPNAME) from=$(OUTPUT)/V30027015RDR.even.cub sinc=65 linc=65 \
-	> /dev/null;
+	  > /dev/null;
 	$$ISISROOT/bin/blobdump \
-	from=$(OUTPUT)/V30027015RDR.even.cub \
-	to=$(OUTPUT)/V30027015RDR.even.txt \
-	name=footprint \
-	type=Polygon > /dev/null;
-	rm $(OUTPUT)/V30027015RDR.even.cub
+	  from=$(OUTPUT)/V30027015RDR.even.cub \
+	  to=$(OUTPUT)/V30027015RDR.even.txt \
+	  name=footprint \
+	  type=Polygon > /dev/null;
+	$(CAT) $(OUTPUT)/V30027015RDR.even.txt | \
+	  sed 's/\([0-9]\.[0-9]\{6\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/V30027015RDR.trimmed.even.txt
+	rm $(OUTPUT)/V30027015RDR.even.cub $(OUTPUT)/V30027015RDR.even.txt
