Modified Makefile to use sed to enforce a tolerance of 9 decimal places to remove need for ostruthdata
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1949 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isis2gml/tsts/case01/Makefile
+++ b/isis/src/base/apps/isis2gml/tsts/case01/Makefile
@@ -8,3 +8,8 @@ commands:
 	to=$(OUTPUT)/ab102401gml.txt \
 	label= "appTest" > /dev/null;
 	$(RM) $(OUTPUT)/ab102401.cub
+	cat $(OUTPUT)/ab102401gml.txt | \
+	  sed 's/\([0-9]\.[0-9]\{9\}\)\([0-9]*\)/\1/g' \
+	  > $(OUTPUT)/ab102401gml2.txt;
+	$(MV) $(OUTPUT)/ab102401gml2.txt $(OUTPUT)/ab102401gml.txt \
+	  > /dev/null;
