--- a/isis/src/base/apps/footprintinit/tsts/boundary/Makefile
+++ b/isis/src/base/apps/footprintinit/tsts/boundary/Makefile
@@ -12,4 +12,7 @@ commands:
 	to=$(OUTPUT)/EN0108821505M.txt \
 	name="footprint" \
 	type=Polygon > /dev/null;
-	rm $(OUTPUT)/EN0108821505M.cal.cub;
+	$(CAT) $(OUTPUT)/EN0108821505M.txt | \
+	  sed 's/\([0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/EN0108821505M.trimmed.txt
+	rm $(OUTPUT)/EN0108821505M.cal.cub $(OUTPUT)/EN0108821505M.txt;
