--- a/isis/src/base/apps/footprintinit/tsts/limb/Makefile
+++ b/isis/src/base/apps/footprintinit/tsts/limb/Makefile
@@ -5,22 +5,30 @@ include $(ISISROOT)/make/isismake.tsts
 # cp so I don't destroy the input cube
 commands:
 	$(CP) $(INPUT)/CM_1504753137_1.ir.cub \
-	$(OUTPUT)/CM_1504753137_1.ir.cub;
+	  $(OUTPUT)/CM_1504753137_1.ir.cub;
 	$(APPNAME) from=$(OUTPUT)/CM_1504753137_1.ir.cub \
-	sinc=5 linc=5 > /dev/null;
+	  sinc=5 linc=5 > /dev/null;
 	$$ISISROOT/bin/blobdump \
-	from=$(OUTPUT)/CM_1504753137_1.ir.cub \
-	to=$(OUTPUT)/CM_1504753137_1.txt \
-	name=footprint \
-	type=Polygon > /dev/null;
+	  from=$(OUTPUT)/CM_1504753137_1.ir.cub \
+	  to=$(OUTPUT)/CM_1504753137_1.txt \
+	  name=footprint \
+	  type=Polygon > /dev/null;
+	$(CAT) $(OUTPUT)/CM_1504753137_1.txt | \
+	  sed 's/\([0-9]\.[0-9]\{4\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/CM_1504753137_1.trimmed.txt
 	$(CP) $(INPUT)/CM_1504753137_1.ir.cub \
-	$(OUTPUT)/CM_1504753137_1.2.ir.cub;
+	  $(OUTPUT)/CM_1504753137_1.2.ir.cub;
 	$(APPNAME) from=$(OUTPUT)/CM_1504753137_1.2.ir.cub \
-	sinc=5 linc=5 maxemission=50.0 maxincidence=50.0 > /dev/null;
+	  sinc=5 linc=5 maxemission=50.0 maxincidence=50.0 > /dev/null;
 	$$ISISROOT/bin/blobdump \
-	from=$(OUTPUT)/CM_1504753137_1.2.ir.cub \
-	to=$(OUTPUT)/CM_1504753137_1.2.txt \
-	name=footprint \
-	type=Polygon > /dev/null;
-	rm $(OUTPUT)/CM_1504753137_1.ir.cub
-	rm $(OUTPUT)/CM_1504753137_1.2.ir.cub
+	  from=$(OUTPUT)/CM_1504753137_1.2.ir.cub \
+	  to=$(OUTPUT)/CM_1504753137_1.2.txt \
+	  name=footprint \
+	  type=Polygon > /dev/null;
+	$(CAT) $(OUTPUT)/CM_1504753137_1.2.txt | \
+	  sed 's/\([0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/CM_1504753137_1.2.trimmed.txt
+	$(RM) $(OUTPUT)/CM_1504753137_1.ir.cub
+	$(RM) $(OUTPUT)/CM_1504753137_1.2.ir.cub
+	$(RM) $(OUTPUT)/CM_1504753137_1.txt
+	$(RM) $(OUTPUT)/CM_1504753137_1.2.txt
