--- a/isis/src/base/apps/footprintinit/tsts/pole/Makefile
+++ b/isis/src/base/apps/footprintinit/tsts/pole/Makefile
@@ -6,10 +6,13 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(CP) $(INPUT)/N1500056057_2.cub $(OUTPUT)/N1500056057_2.cub;
 	$(APPNAME) from=$(OUTPUT)/N1500056057_2.cub sinc=10 linc=10 \
-	> /dev/null;
+	  > /dev/null;
 	$$ISISROOT/bin/blobdump \
-	from=$(OUTPUT)/N1500056057_2.cub \
-	to=$(OUTPUT)/N1500056057_2.txt \
-	name=footprint \
-	type=Polygon > /dev/null;
-	rm $(OUTPUT)/N1500056057_2.cub
+	  from=$(OUTPUT)/N1500056057_2.cub \
+	  to=$(OUTPUT)/N1500056057_2.txt \
+	  name=footprint \
+	  type=Polygon > /dev/null;
+	$(CAT) $(OUTPUT)/N1500056057_2.txt | \
+	  sed 's/\([0-9]\.[0-9]\{3\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/N1500056057_2.trimmed.txt
+	rm $(OUTPUT)/N1500056057_2.cub $(OUTPUT)/N1500056057_2.txt
