--- a/isis/src/base/apps/footprintinit/tsts/poleMultiBoundary/Makefile
+++ b/isis/src/base/apps/footprintinit/tsts/poleMultiBoundary/Makefile
@@ -12,4 +12,7 @@ commands:
 	to=$(OUTPUT)/e1202081.txt \
 	name=footprint \
 	type=Polygon > /dev/null;
-	rm $(OUTPUT)/e1202081.cub
+	$(CAT) $(OUTPUT)/e1202081.txt | \
+	  sed 's/\([0-9]\.[0-9]\{3\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/e1202081.trimmed.txt
+	rm $(OUTPUT)/e1202081.cub $(OUTPUT)/e1202081.txt
