--- a/isis/src/base/apps/footprintinit/tsts/step/Makefile
+++ b/isis/src/base/apps/footprintinit/tsts/step/Makefile
@@ -7,10 +7,16 @@ commands:
 	$(CP) $(INPUT)/PSP_001365_2720_RED4_0.cub $(OUTPUT)/long.cub;
 	$(APPNAME) from=$(OUTPUT)/long.cub linc=1500 > /dev/null;
 	$$ISISROOT/bin/blobdump from=$(OUTPUT)/long.cub \
-	to=$(OUTPUT)/long.txt name=footprint type=Polygon > /dev/null;
-	rm $(OUTPUT)/long.cub
+	  to=$(OUTPUT)/long.txt name=footprint type=Polygon > /dev/null;
+	$(CAT) $(OUTPUT)/long.txt | \
+	  sed 's/\([0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/long.trimmed.txt
+	$(RM) $(OUTPUT)/long.cub $(OUTPUT)/long.txt
 	$(CP) $(INPUT)/PSP_001365_2720_RED4_0.cub $(OUTPUT)/wide.cub;
 	$(APPNAME) from=$(OUTPUT)/wide.cub sinc=1500 >/dev/null;
 	$$ISISROOT/bin/blobdump from=$(OUTPUT)/wide.cub \
-	to=$(OUTPUT)/wide.txt name=footprint type=Polygon > /dev/null;
-	rm $(OUTPUT)/wide.cub
+	  to=$(OUTPUT)/wide.txt name=footprint type=Polygon > /dev/null;
+	$(CAT) $(OUTPUT)/wide.txt | \
+	  sed 's/\([0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+	  sed -e '$$G' > $(OUTPUT)/wide.trimmed.txt
+	$(RM) $(OUTPUT)/wide.cub $(OUTPUT)/wide.txt
