--- a/isis/src/base/apps/caminfo/tsts/csv/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/csv/Makefile
@@ -4,5 +4,10 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) FROM=$(INPUT)/input.cub \
-	TO=$(OUTPUT)/truth.txt FORMAT=csv APPEND=false \
+	TO=$(OUTPUT)/temp.txt FORMAT=flat APPEND=false \
 	STATISTICS=true CAMSTATS=true GEOMETRY=true spice=true > /dev/null;
+	cat $(OUTPUT)/temp.txt | \
+	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+	  sed 's/\([a-z]*\,\)\([0-9]\.[0-9]\.[0-9]\.[0-9] | [0-9]\{4\}\-[0-9]\{2\}\-[0-9]\{2\}\)/\1/g' \
+	  > $(OUTPUT)/truth.txt;
+	$(RM) $(OUTPUT)/temp.txt;
