Changed Makefile output names to reflect actual files, cnets, not pvl
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1955 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/autoseed/tsts/seeddef/Makefile
+++ b/isis/src/control/apps/autoseed/tsts/seeddef/Makefile
@@ -7,31 +7,31 @@ commands:
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis \
 	seeddef=$(INPUT)/gridPixels.pvl \
 	overlaplist=$(INPUT)/listoverlaps.def \
-	to=$(OUTPUT)/new.pixels.net.pvl \
+	to=$(OUTPUT)/new.pixels.net \
 	networkid=NewNetwork pointid="new????" description=NewNetwork \
 	> /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis \
 	seeddef=$(INPUT)/gridEmission.pvl \
 	overlaplist=$(INPUT)/listoverlaps.def \
-	to=$(OUTPUT)/new.emission.net.pvl \
+	to=$(OUTPUT)/new.emission.net \
 	networkid=NewNetwork pointid="new????" description=NewNetwork \
 	> /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis \
 	seeddef=$(INPUT)/gridIncidence.pvl \
 	overlaplist=$(INPUT)/listoverlaps.def \
-	to=$(OUTPUT)/new.incidence.net.pvl \
+	to=$(OUTPUT)/new.incidence.net \
 	networkid=NewNetwork pointid="new????" description=NewNetwork \
 	> /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis \
 	seeddef=$(INPUT)/gridResolution.pvl \
 	overlaplist=$(INPUT)/listoverlaps.def \
-	to=$(OUTPUT)/new.resolution.net.pvl \
+	to=$(OUTPUT)/new.resolution.net \
 	networkid=NewNetwork pointid="new????" description=NewNetwork \
 	> /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis \
 	seeddef=$(INPUT)/gridDN.pvl \
 	overlaplist=$(INPUT)/listoverlaps.def \
-	to=$(OUTPUT)/new.dn.net.pvl \
+	to=$(OUTPUT)/new.dn.net \
 	networkid=NewNetwork pointid="new????" description=NewNetwork \
 	> /dev/null;
 	$(RM) $(OUTPUT)/list.lis;
