--- a/isis/src/control/apps/cnetref/tsts/interestOverlaps/Makefile
+++ b/isis/src/control/apps/cnetref/tsts/interestOverlaps/Makefile
@@ -12,10 +12,7 @@ commands:
 	  criteria=interest \
 	  limit=true \
 	  overlaplist=$(INPUT)/overlaps.lis \
-	  onet=$(OUTPUT)/truth.bin \
+	  onet=$(OUTPUT)/truth.net \
 	  networkid=DefaultTruth \
 	  Description=Testing > /dev/null;
-	  cnetbin2pvl from=$(OUTPUT)/truth.bin \
-	  to=$(OUTPUT)/truth.pvl >/dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
-	  $(RM) $(OUTPUT)/truth.bin;
