Now uses binary cnetdiff
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1969 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetref/tsts/resolutionMean/Makefile
+++ b/isis/src/control/apps/cnetref/tsts/resolutionMean/Makefile
@@ -11,10 +11,7 @@ commands:
 	  deffile=$(INPUT)/deffile.def \
 	  criteria=resolution \
 	  type=mean \
-	  onet=$(OUTPUT)/truth.bin \
+	  onet=$(OUTPUT)/truth.net \
 	  networkid=DefaultTruth \
 	  Description=RefByIncidence > /dev/null;
-	  cnetbin2pvl from=$(OUTPUT)/truth.bin \
-	  to=$(OUTPUT)/truth.pvl >/dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
-	  $(RM) $(OUTPUT)/truth.bin;
