Now uses binary cnet diff
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1971 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetextract/tsts/pointlist/Makefile
+++ b/isis/src/control/apps/cnetextract/tsts/pointlist/Makefile
@@ -5,7 +5,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis cnet=$(INPUT)/cnet.net \
-	tolist=$(OUTPUT)/newList.lis outnet=$(OUTPUT)/newNet.pvl \
+	tolist=$(OUTPUT)/newList.lis outnet=$(OUTPUT)/newNet.net \
 	networkid=new description=new prefix=$(OUTPUT)/out \
 	noignore=true nomeasureless=true \
 	pointlist=$(INPUT)/points.lis > /dev/null;
