Changed duplicate input cube name to avoid temp conflicts.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1974 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/caminfo/tsts/default/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/default/Makefile
@@ -3,7 +3,7 @@ APPNAME = caminfo
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/input.cub \
+	$(APPNAME) FROM=$(INPUT)/input2.cub \
 	TO=$(OUTPUT)/caminfo.pvl ISISLABEL=true ORIGINAL=true \
 	STATISTICS=true CAMSTATS=true POLYGON=true polysinc=100 polylinc=100 > /dev/null;
 	cat $(OUTPUT)/caminfo.pvl | \
@@ -13,7 +13,7 @@ commands:
 	  > $(OUTPUT)/caminfo2.pvl;
 	$(MV) $(OUTPUT)/caminfo2.pvl $(OUTPUT)/caminfo.pvl;
 	
-	$(APPNAME) FROM=$(INPUT)/input.cub \
+	$(APPNAME) FROM=$(INPUT)/input2.cub \
 	TO=$(OUTPUT)/caminfo2.pvl ISISLABEL=true ORIGINAL=true \
 	STATISTICS=true CAMSTATS=true POLYGON=true > /dev/null;
 	cat $(OUTPUT)/caminfo2.pvl | \
