Fixed tests so that binary cnet comparison is used instead of pvl.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1975 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetadd/tsts/point/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/point/Makefile
@@ -7,11 +7,9 @@ outnet.pvl.IGNORELINES = DateTime
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/add.lis;
 	$(APPNAME) innet=$(INPUT)/seedGrid.net addlist=$(OUTPUT)/add.lis \
-	outnet=$(OUTPUT)/outnet.bin log=$(OUTPUT)/outlog.pvl \
-	retrieval=POINT tolist=$(OUTPUT)/outlist.txt \
-	> /dev/null;
-	cnetbin2pvl from=$(OUTPUT)/outnet.bin \
-	to=$(OUTPUT)/outnet.pvl > /dev/null;
+	  outnet=$(OUTPUT)/outnet.net log=$(OUTPUT)/outlog.pvl \
+	  retrieval=POINT tolist=$(OUTPUT)/outlist.txt \
+	  > /dev/null;
 	$(CAT) $(OUTPUT)/outlist.txt | sed 's#.*/##' > $(OUTPUT)/temp.txt;
 	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/outlist.txt;
-	$(RM) $(OUTPUT)/add.lis $(OUTPUT)/outnet.bin;
+	$(RM) $(OUTPUT)/add.lis;
