--- a/isis/src/control/apps/cnetadd/tsts/default/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/default/Makefile
@@ -6,21 +6,15 @@ commands:
 	$(LS) $(INPUT)/*M.cub > $(OUTPUT)/add.lis;
 	$(LS) $(INPUT)/*cal.cub > $(OUTPUT)/files.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
-        innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
-	outnet=$(OUTPUT)/outnet.bin log=$(OUTPUT)/outlog.pvl \
-	tolist=$(OUTPUT)/outlist.txt > /dev/null;
+	  innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
+	  outnet=$(OUTPUT)/outnet.net log=$(OUTPUT)/outlog.pvl \
+	  tolist=$(OUTPUT)/outlist.txt > /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
-        innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
-	extract=modified modifiedpoints=$(OUTPUT)/modified.txt \
-	outnet=$(OUTPUT)/modifiednet.bin log=$(OUTPUT)/modifiedlog.pvl \
-	> /dev/null;
+	  innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
+	  extract=modified modifiedpoints=$(OUTPUT)/modified.txt \
+	  outnet=$(OUTPUT)/modifiednet.net log=$(OUTPUT)/modifiedlog.pvl \
+	  > /dev/null;
 	$(CAT) $(OUTPUT)/outlist.txt | sed 's#.*/##' > $(OUTPUT)/temp.txt;
 	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/outlist.txt;
-	cnetbin2pvl from=$(OUTPUT)/outnet.bin \
-	to=$(OUTPUT)/outnet.pvl > /dev/null;
-	cnetbin2pvl from=$(OUTPUT)/modifiednet.bin \
-	to=$(OUTPUT)/modifiednet.pvl > /dev/null;
 	$(RM) $(OUTPUT)/add.lis;
 	$(RM) $(OUTPUT)/files.lis;
-	$(RM) $(OUTPUT)/modifiednet.bin;
-	$(RM) $(OUTPUT)/outnet.bin;
