Minor change to test to allow for passing with different paths to file
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1981 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/getsn/tsts/flat/Makefile
+++ b/isis/src/base/apps/getsn/tsts/flat/Makefile
@@ -8,3 +8,5 @@ commands:
 	  FILE=TRUE \
 	  OBSERVATION=TRUE \
 	  FORMAT=FLAT > /dev/null;
+	sed s:.*/isis:isis:g $(OUTPUT)/output.txt > $(OUTPUT)/output2.txt;
+	rm -f $(OUTPUT)/output.txt > /dev/null;
