--- a/isis/src/base/apps/editlab/tsts/setKey/Makefile
+++ b/isis/src/base/apps/editlab/tsts/setKey/Makefile
@@ -1,5 +1,6 @@
 APPNAME = editlab
 editlabTruth1.txt.IGNORELINES=ByteOrder
+tempLab1.txt.IGNORELINES=Bytes
 
 include $(ISISROOT)/make/isismake.tsts
 
