--- a/isis/src/control/apps/cnetnewradii/tsts/somefailures/Makefile
+++ b/isis/src/control/apps/cnetnewradii/tsts/somefailures/Makefile
@@ -5,6 +5,6 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) CNET=$(INPUT)/AS15_Rev4_Reg_wLOLA.edited.net \
 	DEM=$(INPUT)/ldem_8ppd_LATneg30toneg18_LON142to178.cub \
-	TO=$(OUTPUT)/outputcnet.net \
+	TO=$(OUTPUT)/outputcnet.net getlatlon=apriori \
 	networkid=SomeFailuresTestCase_CnetNewRadii > /dev/null;
 	mv failures.log $(OUTPUT)/failures.pvl;
