Total re-write as well as others, see history!
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2084 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/caminfo/tsts/boundary/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/boundary/Makefile
@@ -6,7 +6,7 @@ commands:
 	$(APPNAME) FROM=$(INPUT)/f217s25.cub \
 	TO=$(OUTPUT)/caminfo.pvl ISISLABEL=true ORIGINAL=true \
 	STATISTICS=true CAMSTATS=true linc=25 sinc=25 \
-	POLYGON=true polysinc=100 polylinc=100 > /dev/null;
+	POLYGON=true flatinc=false polysinc=100 polylinc=100 > /dev/null;
 	cat $(OUTPUT)/caminfo.pvl | \
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
 	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
