caminfo.xml: Changed the new parameter's names. (INCTYPE, NUMVERTICES)
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2097 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/caminfo/tsts/default/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/default/Makefile
@@ -5,7 +5,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/input2.cub \
 	TO=$(OUTPUT)/caminfo.pvl ISISLABEL=true ORIGINAL=true \
-	STATISTICS=true CAMSTATS=true POLYGON=true flatinc=false polysinc=100 polylinc=100 > /dev/null;
+	STATISTICS=true CAMSTATS=true POLYGON=true polysinc=100 polylinc=100 > /dev/null;
 	cat $(OUTPUT)/caminfo.pvl | \
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
 	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
@@ -15,7 +15,7 @@ commands:
 	
 	$(APPNAME) FROM=$(INPUT)/input2.cub \
 	TO=$(OUTPUT)/caminfo2.pvl ISISLABEL=true ORIGINAL=true \
-	STATISTICS=true CAMSTATS=true POLYGON=true flatinc=false > /dev/null;
+	STATISTICS=true CAMSTATS=true POLYGON=true > /dev/null;
 	cat $(OUTPUT)/caminfo2.pvl | \
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
 	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
@@ -25,7 +25,7 @@ commands:
 	
 	$(APPNAME) FROM=$(INPUT)/input2.cub \
 	TO=$(OUTPUT)/caminfo3.pvl ISISLABEL=true ORIGINAL=true \
-	STATISTICS=true CAMSTATS=true POLYGON=true > /dev/null;
+	STATISTICS=true CAMSTATS=true POLYGON=true INCTYPE=VERTICES > /dev/null;
 	cat $(OUTPUT)/caminfo3.pvl | \
 	  sed 's/\(MULTIPOLYGON.*[0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
 	  sed 's/\([0-9]*\.[0-9]\{5\}\)\([0-9]*)))\)/\1)))/g' | \
