--- a/isis/src/base/apps/caminfo/tsts/csv/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/csv/Makefile
@@ -3,7 +3,8 @@ APPNAME = caminfo
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/input.cub \
+	$(CP) $(INPUT)/input.cub $(OUTPUT)/input.cub;
+	$(APPNAME) FROM=$(OUTPUT)/input.cub \
 	TO=$(OUTPUT)/temp.txt FORMAT=flat APPEND=false \
 	STATISTICS=true CAMSTATS=true GEOMETRY=true spice=true > /dev/null;
 	cat $(OUTPUT)/temp.txt | \
@@ -11,3 +12,4 @@ commands:
 	  sed 's/\([a-z]*\,\)\([0-9]\.[0-9]\.[0-9]\.[0-9] | [0-9]\{4\}\-[0-9]\{2\}\-[0-9]\{2\}\)/\1/g' \
 	  > $(OUTPUT)/truth.txt;
 	$(RM) $(OUTPUT)/temp.txt;
+	$(RM) $(OUTPUT)/input.cub;
