Updated parameter names
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2227 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetmerge/tsts/default/Makefile
+++ b/isis/src/control/apps/cnetmerge/tsts/default/Makefile
@@ -4,9 +4,9 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) INPUTTYPE=cnets \
-	FROM1=$(INPUT)/testNet.ctl \
-	FROM2=$(INPUT)/testNet2.ctl \
-	TO=$(OUTPUT)/testReplace.net \
+	CNET=$(INPUT)/testNet.ctl \
+	CNET2=$(INPUT)/testNet2.ctl \
+	ONET=$(OUTPUT)/testReplace.net \
 	DUPLICATEPOINTS=merge \
-	ID=testReplaceMerge DESCRIPTION=NewTextCtl \
+	NETWORKID=testReplaceMerge DESCRIPTION=NewTextCtl \
 	> /dev/null;
