--- a/isis/src/control/apps/cnetmerge/tsts/duplication/Makefile
+++ b/isis/src/control/apps/cnetmerge/tsts/duplication/Makefile
@@ -4,10 +4,10 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) INPUTTYPE=cnets \
-	FROM1=$(INPUT)/testNet.ctl \
-	FROM2=$(INPUT)/testNet2.ctl \
-	TO=$(OUTPUT)/testReplace.net \
+	CNET=$(INPUT)/testNet.ctl \
+	CNET2=$(INPUT)/testNet2.ctl \
+	ONET=$(OUTPUT)/testReplace.net \
 	DUPLICATEPOINTS=merge \
-	REPORT=$(OUTPUT)/report.txt \
-	ID=testReplaceMerge DESCRIPTION=NewTextCtl \
+	LOG=$(OUTPUT)/report.txt \
+	NETWORKID=testReplaceMerge DESCRIPTION=NewTextCtl \
 	> /dev/null;
