--- a/isis/src/control/apps/cnetmerge/tsts/list/Makefile
+++ b/isis/src/control/apps/cnetmerge/tsts/list/Makefile
@@ -5,10 +5,10 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) $(INPUT)/*.ctl > $(OUTPUT)/list.lis;
 	$(APPNAME) INPUTTYPE=list \
-	FROMLIST=$(OUTPUT)/list.lis \
-	TO=$(OUTPUT)/testReplace.net \
+	CLIST=$(OUTPUT)/list.lis \
+	ONET=$(OUTPUT)/testReplace.net \
 	DUPLICATEPOINTS=merge \
-	REPORT=$(OUTPUT)/report.txt \
-	ID=testReplaceMerge DESCRIPTION=NewTextCtl \
+	LOG=$(OUTPUT)/report.txt \
+	NETWORKID=testReplaceMerge DESCRIPTION=NewTextCtl \
 	> /dev/null;
 	$(RM) $(OUTPUT)/list.lis;
