Modified parameter LIST to be FROMLIST, changed code and test to match
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2237 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cubeit/tsts/default/Makefile
+++ b/isis/src/base/apps/cubeit/tsts/default/Makefile
@@ -3,5 +3,5 @@ APPNAME = cubeit
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) list=$(INPUT)/inputList.lis \
+	$(APPNAME) fromlist=$(INPUT)/inputList.lis \
 	  to=$(OUTPUT)/cubeitTruth1.cub > /dev/null;
